Fixed bug with babel

--- a/src/canvas-clock.html
+++ b/src/canvas-clock.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/clock.css">
   <script src="js/reactJS/react.production.min.js" defer></script>
   <script src="js/reactJS/react-dom.production.min.js" defer></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js" defer></script>
+  <script src="js/reactJS/babel.min.js" defer></script>
   <script src="js/clockCanvas/clock.js"></script>
   <script type="text/babel" src="js/clockCanvas/canvasClock.js" defer></script>
   </script>
