Fixed problems with ReactJS

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <h1>ReactJS examples</h1>
   <ul>
     <li><a href="hello-world.html" target="_blank">Hello World</a></li>
+    <li><a href="welcome-message.html" target="_blank">Welcome Message</a></li>
     <li><a href="clock.html" target="_blank">Clock</a></li>
     <li><a href="canvas-clock.html" target="_blank">Canvas Clock</a></li>
     <li><a href="colors.html" target="_blank">Colors</a></li>
